// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StacksContainer is a connected component which binds correct actions 1`] = `
Array [
  "loadStacks",
  "loadStacksByCategory",
  "updateStacks",
  "updateStacksByCategory",
  "getUrl",
  "openStack",
  "createStack",
  "deleteStack",
  "getLogs",
  "updateStackShareStatus",
  "editStack",
  "restartStack",
  "scaleStack",
  "openModalDialog",
  "closeModalDialog",
  "listUsers",
  "resetForm",
]
`;

exports[`StacksContainer is a container which confirmDeleteStack generates correct dialog 1`] = `
Object {
  "body": "Would you like to delete the expectedDisplayName Notebook? Any saved work will continue to be
        stored in the shared drive.",
  "title": "Delete expectedDisplayName Notebook",
}
`;

exports[`StacksContainer is a container which confirmRestartStack calls openModalDialog with correct props 1`] = `
Object {
  "title": "Restart Stack Display Name?",
}
`;

exports[`StacksContainer is a container which confirmShareStack generates correct dialog 1`] = `
Object {
  "body": "Please confirm you wish to share the expectedDisplayName Notebook with other users within the project.
      WARNING: This action cannot currently be reversed.",
  "title": "Share Notebook",
}
`;

exports[`StacksContainer is a container which openCreationForm generates correct dialog 1`] = `
Object {
  "title": "Create a Notebook",
}
`;

exports[`StacksContainer is a container which openEditForm calls openModalDialog with correct props 1`] = `
Object {
  "title": "Edit Notebook",
}
`;

exports[`StacksContainer is a container which passes correct props to StackCard 1`] = `
<StackCards
  createPermission="projects:project-key:stacks:create"
  deletePermission="projects:project-key:stacks:delete"
  deleteStack={[Function]}
  editPermission="projects:project-key:stacks:edit"
  editStack={[Function]}
  getLogs={[Function]}
  openCreationForm={[Function]}
  openPermission="projects:project-key:stacks:open"
  openStack={[Function]}
  restartStack={[Function]}
  scalePermission="projects:project-key:stacks:scale"
  scaleStack={[Function]}
  shareStack={[Function]}
  showCreateButton={true}
  stacks={
    Object {
      "fetching": false,
      "value": Array [
        Object {
          "category": "ANALYSIS",
          "projectKey": "project-key",
          "prop": "prop1",
          "type": "jupyter",
        },
        Object {
          "category": "ANALYSIS",
          "projectKey": "project-key",
          "prop": "prop2",
          "type": "jupyter",
        },
      ],
    }
  }
  typeName="Notebook"
  userPermissions={[Function]}
/>
`;
